--- a/templates/ok.html
+++ b/templates/ok.html
@@ -7,7 +7,11 @@
 
 <body>
     {% block content %}
-        <a href={{ url_for('form')}} class="btn btn-outline-success">OK</a>
+    <div class="row" align="center">
+        <div>
+            <a href={{ url_for('form')}} class="btn btn-outline-success">OK</a>
+        </div>
+    </div>
     {% endblock %}
 </body>
 
