--- a/templates/index.html
+++ b/templates/index.html
@@ -101,15 +101,8 @@
 
             <h1>Grips-ID = {{ k['id'] }}</h1>
             <h2>Verbesserug</h2>
-            <p>{{ k['text'] }}</p>
-            <h2>Beschreibung</h2>
-            <p>{{ k['description'] }}</p>
-            <h2>Wie war es vorher?</h2>
-            <p>{{ k['before'] }}</p>
-            <h2>Wie ist es nachher</h2>
-            <p>{{ k['after'] }}</p>
-
-      
+            <p>{{ k['go_improvement'] }}</p>
+     
         </div> 
             {% endfor %}
         {% endfor %}
