--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
+{% extends "bootstrap/base.html" %}
 <html>
 
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <style>
+{% block styles %}
+<style>
         * {
             box-sizing: border-box
         }
@@ -24,7 +26,7 @@
         /* Slideshow container */
 
         .slideshow-container {
-            max-width: 1000px;
+            max-width: 1800px;
             position: relative;
             margin: auto;
         }
@@ -55,14 +57,14 @@
 
         .fade {
             -webkit-animation-name: fade;
-            -webkit-animation-duration: 1.5s;
+            -webkit-animation-duration: 14.5s;
             animation-name: fade;
-            animation-duration: 1.5s;
+            animation-duration: 14.5s;
         }
 
         @-webkit-keyframes fade {
             from {
-                opacity: .4
+                opacity: 1
             }
             to {
                 opacity: 1
@@ -71,7 +73,7 @@
 
         @keyframes fade {
             from {
-                opacity: .4
+                opacity: 1
             }
             to {
                 opacity: 1
@@ -87,9 +89,10 @@
                 font-size: 11px
             }
         }
-    </style>
+</style>
+{% endblock %}
 </head>
-
+{% block content %}
 <body>
     <div class="slideshow-container">
         <img src="{{ url_for('static', filename="grips_on_logo.png") }}" /> 
@@ -98,41 +101,81 @@
             {% for k in data %}
 
         <div class="mySlides fade">
-
-            <h1>Grips-ID = {{ k['id'] }}</h1>
-            <h2>Verbesserug</h2>
-            <p>{{ k['go_improvement'] }}</p>
-     
+            <div class="row">
+                <div class="col-sm-1">
+                    <h6 class="bg-primary text-white">GripsON-ID = {{ k['id'] }}</h6>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-4">
+                    <h2>Verbesserug</h2>
+                    <p>{{ k['go_improvement'] }}</p>
+                    <h3>Betrifft welche Abteilung?</h3>
+                    <p>{{ k['go_dept_1'] }}</p>
+                    <p>{{ k['go_dept_2'] }}</p>
+                    <p>{{ k['go_dept_3'] }}</p>
+                    <p>{{ k['go_dept_4'] }}</p>
+                </div>
+                <div class="col-sm-4">
+                    <h2>Warum war die Verbsserung nötig?</h2>
+                    <p>{{ k['go_why_1'] }}</p>
+                    <p>{{ k['go_why_2'] }}</p>
+                    <p>{{ k['go_why_3'] }}</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-4">
+                    <h2 class="bh-primary text-white">Was wurde gemacht?</h2>
+                    <p>{{ k['go_what_1'] }}</p>
+                    <p>{{ k['go_what_2'] }}</p>
+                    <p>{{ k['go_what_3'] }}</p>
+                </div>
+                <div class="col-sm-4">
+                    <h2>Was sind die Highlights</h2>
+                    <p>{{ k['go_high_1'] }}</p>
+                    <p>{{ k['go_high_2'] }}</p>
+                    <p>{{ k['go_high_3'] }}</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-12">
+                    <h2>This is a Heading2</h2>
+                    <h6>This is the end</h6>
+                </div>
+            </div>  
         </div> 
             {% endfor %}
         {% endfor %}
 
     </div>
     <br>
-
     <div style="text-align:center">
-        <span class="dot" onclick="currentSlide(1)"></span>
-        <span class="dot" onclick="currentSlide(2)"></span>
-        <span class="dot" onclick="currentSlide(3)"></span>
+            <span class="dot" onclick="currentSlide(1)"></span>
+            <span class="dot" onclick="currentSlide(2)"></span>
+            <span class="dot" onclick="currentSlide(3)"></span>
     </div>
 
-    <script>
-        var slideIndex = 0;
-        showSlides();
+{% endblock %}
+{% block scripts %}
 
-        function showSlides() {
-            var i;
-            var slides = document.getElementsByClassName("mySlides");
-            for (i = 0; i < slides.length; i++) {
-                slides[i].style.display = "none";
-            }
-            slideIndex++;
-            if (slideIndex > slides.length) { slideIndex = 1 }
-            slides[slideIndex - 1].style.display = "block";
-            setTimeout(showSlides, 2300); // Change image every 2 seconds
-        } 
-    </script>
+   <script>
+    var slideIndex = 0;
+    showSlides();
 
+    function showSlides() {
+        var i;
+        var slides = document.getElementsByClassName("mySlides");
+        for (i = 0; i < slides.length; i++) {
+            slides[i].style.display = "none";
+        }   
+        slideIndex++;
+        if (slideIndex > slides.length) { slideIndex = 1 }
+        slides[slideIndex - 1].style.display = "block";
+        setTimeout(showSlides, 15000); // Change image every 2 seconds 
+    }
+   </script>
+}
+{% endblock %}
 </body>
 
 </html>
