--- a/templates/_GripsEntryHelper.html
+++ b/templates/_GripsEntryHelper.html
@@ -8,7 +8,7 @@
             <div class="col-sm-4">
                 {{ field(**kwargs)|safe }}
             </div>
-            <div class="col-sm-2" align="left">
+            <div class="col-sm-2">
                 {% for error in field.errors %}
 <!--
                 <div class="alert alert-danger">
