--- a/static/slide.css
+++ b/static/slide.css
@@ -18,7 +18,7 @@
         /* Slideshow container */
 
         .slideshow-container {
-            max-width: 1000px;
+            max-width: 1800px;
             position: relative;
             margin: auto;
         }
@@ -49,14 +49,14 @@
 
         .fade {
             -webkit-animation-name: fade;
-            -webkit-animation-duration: 1.5s;
+            -webkit-animation-duration: 5.5s;
             animation-name: fade;
-            animation-duration: 1.5s;
+            animation-duration: 5.5s;
         }
 
         @-webkit-keyframes fade {
             from {
-                opacity: .4
+                opacity: 1
             }
             to {
                 opacity: 1
@@ -65,7 +65,7 @@
 
         @keyframes fade {
             from {
-                opacity: .4
+                opacity: 1
             }
             to {
                 opacity: 1
