--- a/templates/index.html
+++ b/templates/index.html
@@ -5,93 +5,12 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 {% block styles %}
-<style>
-        * {
-            box-sizing: border-box
-        }
-
-        body {
-            font-family: Verdana, sans-serif;
-            margin: 0
-        }
-
-        .mySlides {
-            display: none
-        }
-
-        img {
-            vertical-align: middle;
-        }
-
-        /* Slideshow container */
-
-        .slideshow-container {
-            max-width: 1800px;
-            position: relative;
-            margin: auto;
-        }
-
-        /* Caption text */
-
-        .text {
-            color: #f2f2f2;
-            font-size: 15px;
-            padding: 8px 12px;
-            position: absolute;
-            bottom: 8px;
-            width: 100%;
-            text-align: center;
-        }
-
-        /* Number text (1/3 etc) */
-
-        .numbertext {
-            color: #f2f2f2;
-            font-size: 12px;
-            padding: 8px 12px;
-            position: absolute;
-            top: 0;
-        }
-
-        /* Fading animation */
-
-        .fade {
-            -webkit-animation-name: fade;
-            -webkit-animation-duration: 14.5s;
-            animation-name: fade;
-            animation-duration: 14.5s;
-        }
-
-        @-webkit-keyframes fade {
-            from {
-                opacity: 1
-            }
-            to {
-                opacity: 1
-            }
-        }
-
-        @keyframes fade {
-            from {
-                opacity: 1
-            }
-            to {
-                opacity: 1
-            }
-        }
-
-        /* On smaller screens, decrease text size */
-
-        @media only screen and (max-width: 300px) {
-            .prev,
-            .next,
-            .text {
-                font-size: 11px
-            }
-        }
-</style>
+{{super()}}
+<link rel="stylesheet" href="{{ url_for('static', filename="slide.css") }}">
 {% endblock %}
+
 </head>
+
 {% block content %}
 <body>
     <div class="slideshow-container">
@@ -103,38 +22,54 @@
         <div class="mySlides fade">
             <div class="row">
                 <div class="col-sm-1">
-                    <h6 class="bg-primary text-white">GripsON-ID = {{ k['id'] }}</h6>
+                    <h6 class="bg-info">GripsON-ID = {{ k['id'] }}</h6>
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-4">
-                    <h2>Verbesserug</h2>
-                    <p>{{ k['go_improvement'] }}</p>
-                    <h3>Betrifft welche Abteilung?</h3>
-                    <p>{{ k['go_dept_1'] }}</p>
-                    <p>{{ k['go_dept_2'] }}</p>
-                    <p>{{ k['go_dept_3'] }}</p>
-                    <p>{{ k['go_dept_4'] }}</p>
+                <div class="col-sm-4 panel panel-primary">
+                    <div class="panel-heading" style="max-height: 50px; ">
+                        <h4>Verbesserug</h4>
+                    </div>
+                    <div class="panel-body" style="height: 300px;">
+                        <h3><strong>{{ k['go_improvement'] }}</strong></h3>
+                        <h3>Betrifft welche Abteilung?</h3>
+                        <p>{{ k['go_dept_1'] }}</p>
+                        <p>{{ k['go_dept_2'] }}</p>
+                        <p>{{ k['go_dept_3'] }}</p>
+                        <p>{{ k['go_dept_4'] }}</p>
+                    </div>
                 </div>
-                <div class="col-sm-4">
-                    <h2>Warum war die Verbsserung nötig?</h2>
-                    <p>{{ k['go_why_1'] }}</p>
-                    <p>{{ k['go_why_2'] }}</p>
-                    <p>{{ k['go_why_3'] }}</p>
+                <div class="col-sm-4 panel panel-success">
+                    <div class="panel-heading" style="max-height: 50px;">
+                        <h4>Warum war die Verbsserung nötig?</h4>
+                    </div>
+                    <div class="panel-body" style="height: 300px;">
+                        <p>{{ k['go_why_1'] }}</p>
+                        <p>{{ k['go_why_2'] }}</p>
+                        <p>{{ k['go_why_3'] }}</p>
+                    </div>
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-4">
-                    <h2 class="bh-primary text-white">Was wurde gemacht?</h2>
-                    <p>{{ k['go_what_1'] }}</p>
-                    <p>{{ k['go_what_2'] }}</p>
-                    <p>{{ k['go_what_3'] }}</p>
+                <div class="col-sm-4 panel panel-warning">
+                    <div class="panel-heading" style="max-height: 50px;">
+                        <h4>Was wurde gemacht?</h4>
+                    </div>
+                    <div class="panel-body" style="height: 300px;">
+                        <p>{{ k['go_what_1'] }}</p>
+                        <p>{{ k['go_what_2'] }}</p>
+                        <p>{{ k['go_what_3'] }}</p>
+                    </div>
                 </div>
-                <div class="col-sm-4">
-                    <h2>Was sind die Highlights</h2>
-                    <p>{{ k['go_high_1'] }}</p>
-                    <p>{{ k['go_high_2'] }}</p>
-                    <p>{{ k['go_high_3'] }}</p>
+                <div class="col-sm-4 panel panel-info">
+                    <div class="panel-heading" style="max-height: 50px;">
+                        <h4>Was sind die Highlights</h4>
+                    </div>
+                    <div class="panel-body" style="height: 300px;">
+                        <p>{{ k['go_high_1'] }}</p>
+                        <p>{{ k['go_high_2'] }}</p>
+                        <p>{{ k['go_high_3'] }}</p>
+                    </div>
                 </div>
             </div>
             <div class="row">
@@ -171,10 +106,17 @@
         slideIndex++;
         if (slideIndex > slides.length) { slideIndex = 1 }
         slides[slideIndex - 1].style.display = "block";
-        setTimeout(showSlides, 15000); // Change image every 2 seconds 
+        setTimeout(showSlides, 1500); // Change image every 2 seconds 
     }
+
+    var secCalc = 1000;
+    var timeout = setTimeout("location.reload(true);",60 * secCalc); // in Sekunden
+    function resetTimeout() {
+        clearTimeout(timeout);
+        timeout = setTimeout("location.reload(true);",60 * secCalc); // in Sekunden
+    }
+
    </script>
-}
 {% endblock %}
 </body>
 
