--- a/templates/_GripsEntryHelper.html
+++ b/templates/_GripsEntryHelper.html
@@ -15,7 +15,7 @@
                     <strong align="center">{{ error }}</strong>
                 </div>
 -->
-                <strong style="color: red">{{ error }}</strong>
+                <strong style="color: red; text-align: left;">{{ error }}</strong>
                 {% endfor%}
             </div>
         </p> 
